<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_Director">

    <TextView
        android:id="@+id/txt_CrearDirectores"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:includeFontPadding="false"
        android:text="@string/nuevo_directores"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/txtcrear_Nombre"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <EditText
        android:id="@+id/txtcrear_Apellido"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtcrear_Nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtcrear_Nombre"
        app:layout_constraintTop_toBottomOf="@+id/txtcrear_Nombre" />

    <EditText
        android:id="@+id/txtcrear_Nacionalidad"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nacionalidad"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtcrear_Apellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtcrear_Apellido"
        app:layout_constraintTop_toBottomOf="@+id/txtcrear_Apellido" />

    <EditText
        android:id="@+id/txtcrear_edad"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Edad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txtcrear_Nacionalidad"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/txtcrear_Nacionalidad"
        app:layout_constraintTop_toBottomOf="@+id/txtcrear_Nacionalidad" />

    <EditText
        android:id="@+id/txtcrear_correo"
        android:layout_width="375sp"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtcrear_edad"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/txtcrear_edad"
        app:layout_constraintTop_toBottomOf="@+id/txtcrear_edad" />

    <Button
        android:id="@+id/btncrear_aceptar"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:text="@string/btnAceptar"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btncrear_cancelar"
        app:layout_constraintStart_toEndOf="@+id/btncrear_cancelar"
        app:layout_constraintTop_toTopOf="@+id/btncrear_cancelar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btncrear_cancelar"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginTop="552dp"
        android:text="@string/btnCancelar"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_CrearDirectores"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_CrearDirectores"
        app:layout_constraintTop_toBottomOf="@+id/txt_CrearDirectores" />

</androidx.constraintlayout.widget.ConstraintLayout>