<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Peliculas.Crear_Peliculas">

    <EditText
        android:id="@+id/etxt_genero_Pelicula"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/duracion"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/año"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/txt_NuevaPelicula"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:text="@string/nueva_pelicula"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:text="@string/nombre"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <EditText
        android:id="@+id/etxt_duracion"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etxt_ano"
        android:layout_width="204sp"
        android:layout_height="40sp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/genero"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/etxt_nombrePelicula"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_crearPeli"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:text="@string/btnAceptar"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancelarCrearPeli"
        app:layout_constraintStart_toEndOf="@+id/btn_cancelarCrearPeli"
        app:layout_constraintTop_toTopOf="@+id/btn_cancelarCrearPeli"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_cancelarCrearPeli"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginTop="552dp"
        android:text="@string/btnCancelar"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_NuevaPelicula"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_NuevaPelicula"
        app:layout_constraintTop_toBottomOf="@+id/txt_NuevaPelicula" />

</androidx.constraintlayout.widget.ConstraintLayout>