<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editar_Director">

    <TextView
        android:id="@+id/txteditar_IdDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="ID Director:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_EditarDirectores"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_EditarDirectores"
        app:layout_constraintTop_toBottomOf="@+id/txt_EditarDirectores" />

    <TextView
        android:id="@+id/txt_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txteditar_IdDirector"
        app:layout_constraintStart_toEndOf="@+id/txteditar_IdDirector"
        app:layout_constraintTop_toTopOf="@+id/txteditar_IdDirector"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_EditarDirectores"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:includeFontPadding="false"
        android:text="@string/editar_directores"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/txtedit_Nombre"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:hint="Nombre: "
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <EditText
        android:id="@+id/txtedit_Apellido"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Apellido: "
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtedit_Nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtedit_Nombre"
        app:layout_constraintTop_toBottomOf="@+id/txtedit_Nombre" />

    <EditText
        android:id="@+id/txtedit_Nacionalidad"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Nacionalidad:"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtedit_Apellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtedit_Apellido"
        app:layout_constraintTop_toBottomOf="@+id/txtedit_Apellido" />

    <EditText
        android:id="@+id/txtedit_edad"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Edad:"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txtedit_Nacionalidad"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/txtedit_Nacionalidad"
        app:layout_constraintTop_toBottomOf="@+id/txtedit_Nacionalidad" />

    <EditText
        android:id="@+id/txtedir_correo"
        android:layout_width="256dp"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Email:"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtedit_edad"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/txtedit_edad"
        app:layout_constraintTop_toBottomOf="@+id/txtedit_edad" />

    <Button
        android:id="@+id/btnedit_aceptar"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:text="@string/btnAceptar"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancelar"
        app:layout_constraintStart_toEndOf="@+id/btn_cancelar"
        app:layout_constraintTop_toTopOf="@+id/btn_cancelar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginTop="552dp"
        android:text="@string/btnCancelar"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_EditarDirectores"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_EditarDirectores"
        app:layout_constraintTop_toBottomOf="@+id/txt_EditarDirectores" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:text="@string/nombre"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/apellido"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/nacionalidad"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Edad"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/correo"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>